[tool.poetry]
name = "huggingfacetutorial"
version = "0.1.0"
description = ""
authors = ["Felix Morillas Navas <Felix.Morillas-Navas@adesso-insurance-solutions.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
