[tool.poetry]
name = "huggingfacetutorial"
version = "0.1.0"
description = ""
authors = ["Felix Morillas Navas <Felix.Morillas-Navas@adesso-insurance-solutions.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.38.2"
tensorflow = "^2.16.1"
torch = "^2.2.1"
tf-keras = "^2.16.0"
datasets = "^2.18.0"
soundfile = "^0.12.1"
librosa = "^0.10.1"
levenshtein = "^0.25.0"
accelerate = "^0.28.0"
bitsandbytes = "0.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
